--- a/assets/fansite.css
+++ b/assets/fansite.css
@@ -4,8 +4,24 @@
     box-sizing: border-box;
 }
 
-.liens {
+.header {
     background-image: url(images/cinema.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-size: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    width: 100%;
+    height: 500px;
+    color: rgb(213, 190, 160);
+
+
+}
+
+.liens {
+    background-color: rgb(48, 47, 47);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -22,7 +38,7 @@
     justify-content: space-around;
 }
 
-body {
+.body {
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -30,10 +46,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-}
-
-html,
-body {
+    background-color: rgb(48, 47, 47);
     height: 100%;
 }
 
@@ -49,4 +62,31 @@ body {
     height: 450px;
     border-radius: 8px;
     width: 300px;
+}
+
+.page-film {
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
+    background-image: url(images/fight-club2.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: antiquewhite;
+}
+
+
+.video {
+    flex: 1;
+    padding: 20px;
+}
+
+.texte-page {
+    font-size: 16px;
+    margin: 20px;
+    flex: 1;
+    background-color: #333434;
+    color: white;
+    margin-right: 300px;
+    padding: 20px;
 }
