--- a/assets/fansite.css
+++ b/assets/fansite.css
@@ -335,7 +335,76 @@ padding: 20px;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    }      
+    }   
+    
+    
+    
+.contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: "Fascinate Inline", system-ui;
+    background-image: url(images/séries/orange-mecanique.avif);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+}
+
+.formulaire {
+    padding: 30px;
+    width: 420px;
+    border-radius: 20px;
+    border: 2px solid white;
+    background-color: #d9e2c359;
+}
+
+.formulaire h1 {
+    font-size: 30px;
+    font-family: "Fascinate Inline", system-ui;
+    color: #0e1301;
+    margin-bottom: 20px;
+}
+
+.input-box {
+    width: 100%;
+    position: relative;
+    margin-bottom: 25px;
+}
+
+.input-box input {
+    width: 100%;
+    padding: 15px;
+    border-radius: 25px;
+    outline: none;
+    background-color: transparent;
+    border: 2px solid white;
+    color: rgb(34, 1, 1);
+    padding-right: 40px;
+}
+
+.input-box input::placeholder {
+    color: rgb(0, 0, 0);
+}
+
+.btn {
+    width: 100%;
+    padding: 15px;
+    border-radius: 25px;
+    outline: none;
+    border: 0;
+    font-weight: bold;
+    cursor: pointer;
+    border: 2px solid transparent;
+    transition: 0.5s;
+}
+
+.btn:hover {
+    background-color: transparent;
+    border: 2px solid rgb(214, 168, 28);
+    color: rgb(195, 121, 11);
+}
 
 .footer2 {
     background-color: #3b0205;
