--- a/assets/fansite.css
+++ b/assets/fansite.css
@@ -517,7 +517,7 @@ a:hover {
 }
 
 .bloc-faq {
-    background-color: #083728;
+    background: linear-gradient(to bottom, #041c14, #025335);
     padding: 20px 40px;
     border-radius: 8px;
     text-align: center;
@@ -851,7 +851,8 @@ textarea {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
     font-family: system-ui;
-    background-color: #234ab7;
+    /* background-color: #234ab7; */
+    background: linear-gradient(to bottom, #160248, #234ab7);
     color: rgb(213, 190, 160);
     padding: 20px;
     border-radius: 20px;
